Fixed a styling issue on Safari

--- a/styles/print.css
+++ b/styles/print.css
@@ -49,7 +49,6 @@
     border: 1px solid;
     padding: 9px;
     font-size: 1.2em;
-    font-weight: lighter;
     cursor: pointer;
     background-color: #F1F1EF;
     color: #0D0D0E;
